fix: unbreak the styles that I readded in by accident

--- a/credentials/apps/credentials_theme_openedx/static/sass/_print-rendering.scss
+++ b/credentials/apps/credentials_theme_openedx/static/sass/_print-rendering.scss
@@ -35,7 +35,6 @@
           .accomplishment-title {
             @include make-col-ready();
             @include make-col(8);
-            @extend %mt-2, %mb-0;
             margin-bottom: 0;
             margin-top: $spacer * .5;
             display: inline-block;
